# Phone-Directory-Dynamic-Trie

./: CMakeLists.txt  PhoneBookICon.rc  README.md  Trie.cpp  Trie.h  fonts.qrc  main.cpp  mainscreen.cpp  mainscreen.h  mainscreen.ui  mydatabase.cpp  mydatabase.h  pic.qrc
